[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlex-python"
version = "0.0.1"
authors = [
  { name="Phoenix Pagan", email="phoenix.pgn@gmail.com" },
]
description = "Lightweight machine learning experiment-tracking tool."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "datetime",
    "json",
]

[project.urls]
"Homepage" = "https://github.com/phoenixp123/MLeX"
"Bug Tracker" = "https://github.com/phoenixp123/MLeX/issues"